--- a/DEINT-Ej9_El_tiempo/DEINT-Ej9_El_tiempo.csproj
+++ b/DEINT-Ej9_El_tiempo/DEINT-Ej9_El_tiempo.csproj
@@ -63,11 +63,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="MVVM\" />
+	  <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+	  <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.61" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.61" />
+	  <MauiXaml Update="MVVM\View\WeatherView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
